# domain-forge

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  README_CN.md  domain-forge.toml  snipe_4letter.json
src/: error.rs  lib.rs  main.rs  types.rs
src/domain/: checker.rs  mod.rs  validator.rs
src/llm/: generator.rs  mod.rs
src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/rdap/: mod.rs  registry.rs
src/snipe/: filter.rs  generator.rs  mod.rs  readable.rs  scanner.rs  six.rs  state.rs  words.rs
tests/: integration.rs
